# poisson3d

./: .gitignore  CMakeLists.txt  Readme.md  cartmesh.hpp  definitions.hpp  petscrc  petscrc_bak  petscrc_otheroptions  poisson3d.cpp  sample.control  test.control
runs/: poisson-fgpilu.err  single.sh
